--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
 language: node_js
-before_install:
-  - yarn install
-install:
+node_js:
+  - "8"
+  - "9"
+
+cache: yarn
+
+install: yarn
+script:
   - yarn deploy
