--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,10 @@ cache: yarn
 install: yarn
 script:
   - yarn build
-before_deploy: git config --global user.email publish@travis.github && git config --global user.name "Travis"
 deploy:
-  - edge: true
-    skip_cleanup: true
-    provider: development
-    script: gulp publish
-    on:
-      branch: gh-pages
+  provider: pages
+  skip_cleanup: true
+  github_token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
+  keep_history: true
+  on:
+    branch: master
