--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ cache: yarn
 install: yarn
 script:
   - yarn build
-  - cp CNAME /public
+  - echo 'jvmconfig.in' > public/CNAME
 deploy:
   provider: pages
   skip_cleanup: true
