chore: add Netlify deployment configuration

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,16 @@
-
 # Created by https://www.gitignore.io/api/intellij,eclipse,webstorm
+
+### React ###
+/build
+/dist
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 ### Intellij ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
@@ -50,7 +61,6 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
-
 
 ### Eclipse ###
 
