--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,10 @@
 [build]
-  command = "npm run build"
+  command = "npm ci && npm run build"
   publish = "build"
+
+[build.environment]
+  NODE_VERSION = "16"
+  NPM_VERSION = "8"
 
 [[redirects]]
   from = "/*"
