--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "jvm-config",
   "version": "1.0.0",
   "private": true,
+  "engines": {
+    "node": ">=16.0.0",
+    "npm": ">=8.0.0"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
